force-app/main/default/objects/User/fields/Exclude_User__c.field-meta.xml
<CustomField>
    <fullName>Exclude_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox on process, automation, validation and interactions to exclude where needed</description>
    <label>Exclude User</label>
    <type>Checkbox</type>
</CustomField>