force-app/main/default/objects/User/fields/Hebrew_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Hebrew_First_Name__c</fullName>
    <label>Hebrew First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>