force-app/main/default/objects/User/fields/Hebrew_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Hebrew_Last_Name__c</fullName>
    <label>Hebrew Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>